feat(compiler): evolução abrangente do motor XPL, Linter, operadores e SDM
- **Novo Operador (#)**: Implementada a divisão inteira (ex: 1.5 # 0.6 = 2) a nível de Scanner, Parser, SemanticAnalyzer e Interpreter.
- **Desempacotamento de Opcionais (??)**: Ajustada a análise estática do operador de coalescência nula para extrair o tipo base correto e permitir operações encadeadas.
- **Registo de Classes Variantes**: Ensino ao Linter para reconhecer e registar estaticamente as classes variantes criadas via sintaxe `implement Base as Variante`.
- **Escotilha de Emergência do Cast Forçado (as!)**: Implementado o bypass estático utilizando a flag `isForced` para devolver `"any"`, delegando falhas de conversão para o Run-Time em blocos try/catch.
- **Grafo de Dependências Estáticas (SDM)**: Integrado o `XplModuleManager` (`resolvePhysicalFile`) no `SemanticAnalyzer` para processar imports em *compile-time*, garantindo validação rigorosa de módulos locais/externos e proteção contra dependências circulares estáticas.